force-app/main/default/objects/SecurityWebhookConfig__mdt/SecurityWebhookConfig__mdt.object-meta.xml
<CustomObject>
    <description>SOAR 패키지 전용 아웃바운드 Webhook 엔드포인트 설정 (Slack, Teams 등)</description>
    <label>SecurityWebhookConfig</label>
</CustomObject>