force-app/main/default/objects/SecurityWebhookConfig__mdt/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <description>SOAR에서 전달하는 Webhook 액션의 고유 식별자 (예: NOTIFY_SLACK)</description>
    <label>Action Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>