force-app/main/default/objects/SecurityWebhookConfig__mdt/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>실제 전송할 외부 URL 혹은 Named Credential 포맷 (예: callout:MySlackWebhook)</description>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>