force-app/main/default/objects/SecurityWebhookConfig__mdt/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <defaultValue>true</defaultValue>
    <description>해당 웹훅 설정의 활성화 여부</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>